# yai-nexus-logger

./: .gitignore  CLAUDE.md  LICENSE  README.md  code_review_report_1ff0cc4.md  extra_param_investigation_report.md  official_sdk_solution.md  pyproject.toml  test_failures_solution_report.md  test_fix_verification.py  wait_for_comment.md
.claude/: settings.local.json
.cursor/rules/: yai-open-source.mdc
.github/workflows/: lint.yml  pypi-publish.yml  ruff-lint.yml
examples/: basic_example.py  fastapi_app.py  fastapi_example.py  sls_example.py  test_sls_error_handling.py  trace_id_example.py
scripts/: run_examples.sh
src/yai_nexus_logger/: __init__.py  configurator.py  core.py  formatter.py  handler.py  logger.py  logger_builder.py  trace.py  trace_context.py  uvicorn.py  uvicorn_support.py
src/yai_nexus_logger/internal/: internal_formatter.py  internal_handlers.py  internal_settings.py  internal_sls_handler.py  internal_utils.py
tests/: test_fastapi_integration.py  test_formatter.py  test_logger_setup.py  test_trace.py
tests/examples/: test_fastapi_example.py
tests/yai_nexus_logger/integration/: test_logger_integration.py  test_sls_exc_info_integration.py  test_sls_integration.py
tests/yai_nexus_logger/unit/: test_extra_params.py  test_internal_formatter.py  test_internal_handlers.py  test_logger_builder.py  test_logging.py  test_sls_exc_info_extra.py  test_sls_handler.py  test_trace_context.py  test_uvicorn_support.py
